--- a/P0_Random-Life-Advice-Generator/index.html
+++ b/P0_Random-Life-Advice-Generator/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Life Advice Generator</title>
+  <title>RLAG</title>
+
+  <link rel="icon" type="image/png" href="img/favicon/k4ng00r-favicon.png">
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
