--- a/P1_Color-Palette-Manager/public/index.html
+++ b/P1_Color-Palette-Manager/public/index.html
@@ -4,10 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <!-- Bootstrap 5 CDN -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="./styles/main.css" />
+
 </head>
 <body>
 
   COLOR PALETTE MANAGER
+  <br/><br/>
+  MAIN PAGE
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
