--- a/P1_Color-Palette-Manager/public/index.html
+++ b/P1_Color-Palette-Manager/public/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Palette App</title>
 
-  <!-- Bootstrap 5 CDN -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="./styles/main.css" />
+        <!-- Bootstrap 5 CDN -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./styles/main.css" />
+    </head>
+    <body class="bg-dark text-light">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-4">
+            <div class="container">
+                <a class="navbar-brand" href="#">🎨 PaletteApp</a>
+                <div class="d-flex">
+                    <a
+                        href="./palette.html"
+                        class="btn btn-outline-light btn-sm"
+                        >+ New Palette</a
+                    >
+                </div>
+            </div>
+        </nav>
 
-</head>
-<body>
+        <!-- Main content -->
+        <main class="container">
+            <h1 class="mb-3">Your Palettes</h1>
+            <div id="paletteList" class="row g-4">
+                <!-- JS will inject cards here -->
+            </div>
+        </main>
 
-  COLOR PALETTE MANAGER
-  <br/><br/>
-  MAIN PAGE
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/app.js"></script>
-</body>
+        <!-- Footer -->
+        <footer class="text-center text-secondary mt-5 mb-3">
+            <small>Open source • Bootstrap CRUD prototype</small>
+        </footer>
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- App logic -->
+        <script src="./js/app.js"></script>
+    </body>
 </html>
