--- a/P1_Color-Palette-Manager/public/palette.html
+++ b/P1_Color-Palette-Manager/public/palette.html
@@ -1,25 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>New Palette</title>
 
-  <!-- Bootstrap 5 CDN -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="./styles/main.css" />
+        <!-- Bootstrap 5 CDN -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./styles/main.css" />
+    </head>
+    <body class="bg-dark text-light">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-4">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">← Back</a>
+            </div>
+        </nav>
 
-</head>
-<body>
-  
-  COLOR PALETTE MANAGER
-  <br/><br/>
-  PALETTE PAGE
+        <!-- Main -->
+        <main class="container mb-5">
+            <form id="paletteForm" class="mb-4">
+                <div class="mb-3">
+                    <label for="paletteName" class="form-label"
+                        >Palette name</label
+                    >
+                    <input
+                        type="text"
+                        id="paletteName"
+                        class="form-control"
+                        required
+                    />
+                </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/palette.js"></script>
-</body>
+                <hr />
+
+                <h5>Add colors</h5>
+                <div id="colorList" class="mb-3"></div>
+
+                <div class="row g-2 align-items-end">
+                    <div class="col-md-4">
+                        <label for="colorName" class="form-label"
+                            >Color name</label
+                        >
+                        <input
+                            type="text"
+                            id="colorName"
+                            class="form-control"
+                        />
+                    </div>
+                    <div class="col-md-4">
+                        <label for="colorPicker" class="form-label"
+                            >Pick color</label
+                        >
+                        <input
+                            type="color"
+                            id="colorPicker"
+                            class="form-control form-control-color"
+                            value="#ff0000"
+                        />
+                    </div>
+                    <div class="col-md-2">
+                        <button
+                            type="button"
+                            id="addColor"
+                            class="btn btn-outline-light w-100"
+                        >
+                            Add
+                        </button>
+                    </div>
+                </div>
+
+                <div class="mt-4">
+                    <button type="submit" class="btn btn-primary">
+                        Save Palette
+                    </button>
+                </div>
+            </form>
+
+            <!-- Preview -->
+            <section id="previewSection" class="d-none">
+                <h4>Preview</h4>
+                <div
+                    id="previewColors"
+                    class="d-flex border rounded overflow-hidden"
+                ></div>
+            </section>
+        </main>
+
+        <footer class="text-center text-secondary mt-5 mb-3">
+            <small>Bootstrap CRUD prototype</small>
+        </footer>
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Palette logic -->
+        <script src="./js/palette.js"></script>
+    </body>
 </html>
