--- a/P1_Color-Palette-Manager/public/palette.html
+++ b/P1_Color-Palette-Manager/public/palette.html
@@ -80,6 +80,14 @@
                 </div>
             </form>
 
+            <!-- READ ONLY VIEW -->
+            <section id="readonlView" class="d-none">
+              <h3 id="roName"></h3>
+              <p class="text-muted" id="roDate"></p>
+              <div id="roColors" class="d-flex flex-wrap gap-2 mb-4"></div>
+              <a href="index.html" class="btn btn-outline-light">← Back</a>
+            </section>
+
             <!-- Preview -->
             <section id="previewSection" class="d-none">
                 <h4>Preview</h4>
