2025-10-20: fix html read only section id typoo && fix copy to clipboard function in palette

--- a/P1_Color-Palette-Manager/public/palette.html
+++ b/P1_Color-Palette-Manager/public/palette.html
@@ -81,7 +81,7 @@
             </form>
 
             <!-- READ ONLY VIEW -->
-            <section id="readonlView" class="d-none">
+            <section id="readonlyView" class="d-none">
                 <h3 id="roName"></h3>
                 <p class="text-muted" id="roDate"></p>
                 <div id="roColors" class="d-flex flex-wrap gap-2 mb-4"></div>
